add google analytics

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
       font-family: "Open Sans", sans-serif;
     }
   </style>
-</head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RNBLLR0V07"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag() { dataLayer.push(arguments); }
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-EZMK2Y30S0"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-RNBLLR0V07');
-</script>
+    gtag('config', 'G-EZMK2Y30S0');
+  </script>
+</head>
 
 <body>
   <div id="root"></div>
