--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="I transform ideas into elegant, user-centric web experiences. As a 21-year-old front-end developer with a passion for clean code and modern design, I bring creativity and technical precision to every project.">
+  <meta name="keywords"
+    content="Design, Portfolio, Kamal, Elhaddadi, HTML, CSS, JavaScript, ReactJs, JSON, JavaScript, Tailwindcss">
+  <meta name="author" content="Kamal El Haddadi">
   <title>Kamal el haddadi</title>
+  <link rel="stylesheet" href="./src/assets/image 479.png">
   <!-- Main font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
